Ignores .DS_Stores

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 products/stan_fits/*
 model_files/__pycache__
 analysis/__pycache__
-
+.DS_Store
+analysis/.DS_Store
+data/.DS_Store
+model_files/.DS_Store
+products/.DS_Store
+products/snpy_SNS/.DS_Store
