Ignore .DSstore in data/Misc

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ analysis/__pycache__
 .DS_Store
 analysis/.DS_Store
 data/.DS_Store
-*/*/.DS_store
+data/Misc/.DS_Store
 model_files/.DS_Store
 products/.DS_Store
 products/snpy_SNS/.DS_Store
