--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ products/DFs/
 analysis/build/
 sbc/BAYESN_GITHUB/bayesn-model-files/
 sbc/BAYESN_GITHUB/bayesn-public/
+sbc/BAYESN_GITHUB/pysynphot_downloads/
