--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ sbc/BAYESN_GITHUB/bayesn-model-files/
 sbc/BAYESN_GITHUB/bayesn-public/
 sbc/BAYESN_GITHUB/pysynphot_downloads/
 sbc/model_files/__pycache__/
+sbc/build/
+sbc/products/
