Removed fit parameters from sbc.yaml

--- a/sbc/sbc.yaml
+++ b/sbc/sbc.yaml
@@ -46,62 +46,5 @@ simulate_parameters:
 
 
 fit_parameters:
-  n_warmup   : 500
-  n_sampling : 500
-  n_chains   : 4
-
-  SEDmodel : 'mags_fit_colours_anchor'
-  SEDmodel : 'mags_fit_colours_no_anchor'
-  SEDmodel : 'colours'
-  SEDmodel : 'mags_fit_mags'
-
-  ColourChoice : 'B-X'
-  ColourChoice : 'X-H'
-  ColourChoice : 'Adjacent'
-
-  lam_choice : 'effective_thetaOFF'
-  lam_choice : 'effective_thetaOFFepsOFF'
-  lam_choice : 'central'
-  lam_choice : 'effective_thetaON'
-
-  include_LCshape : True
-  include_LCshape : False
-
-  include_residuals : False
-  include_residuals : True
-
-  fitlowBVonly : False
-  fitlowBVonly : True
-
-  CensoredData : False
-  #############################
-  #CensoredData : True
-  #n_warmup   : 1000
-  #n_sampling : 1000
-  #############################
-
-  AVprior : 'ScaledInvChi2_nu_Cauchy'
-  AVprior : 'HalfCauchy'
-  AVprior : 'HalfCauchywMean'
-  AVprior : 'Exp'
-  ########################
-  #Fit sims with Gamma or Cauchy
-  #AVprior : 'Gamma'
-  #AVprior : 'HalfCauchywMean'
-  #n_warmup   : 1000
-  #n_sampling : 3000
-  ########################
-
-  RVprior : 'Norm'
-
-  EBVmode : True
-  EBVmode : False
-
-  lnmuRVmode : True
-  lnmuRVmode : False
-
-  #############################
-  #AVprior : 'HalfCauchywMean'
-  #n_warmup   : 1000
-  #n_sampling : 2000
-  #############################
+  #Load up f"{birdsnack_yaml}.yaml" for birdsnack fitting choices
+  birdsnack_yaml : 'birdsnack_sbc'
