Ignore messy ppc scripts

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ sbc/products/
 sbc/DLAMS/DLAM_NEW.txt
 model_files/stan_files/deviations_model_fit_mags_Gaussianmuintref_Full.stan
 analysis/plot_RVs.py
+sbc/PERSONAL/
