--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,5 @@ sbc/build/
 sbc/products/
 sbc/DLAMS/DLAM_NEW.txt
 model_files/stan_files/deviations_model_fit_mags_Gaussianmuintref_Full.stan
-analysis/plot_RVs.py
+analysis/PERSONAL/
 sbc/PERSONAL/
