--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ sbc/DLAMS/DLAM_NEW.txt
 model_files/stan_files/deviations_model_fit_mags_Gaussianmuintref_Full.stan
 analysis/PERSONAL/
 sbc/PERSONAL/
+.ipynb_checkpoints/
+build/
