--- a/sbc/sbc.yaml
+++ b/sbc/sbc.yaml
@@ -35,9 +35,8 @@ simulate_parameters:
   #Population distribution of AVs parameters
   AVsimdist : 'Gamma'
   AVsimdist : 'Exp'
-  AV_parameters :
-    nuA : None
-    nuA : 3
+  #nuA : 3
+  nuA : None
   #Pre-defined Intrinsic Population Hyperparameters, if True, set to posterior medians from some file
   PredefinedIntrinsicHyps : True
   PredefinedIntrinsicHyps : False
